# adb

./: CMakeLists.txt  README.md  platform_tools_version.h.in  version.h.in
.github/workflows/: delete-workflow-runs.yml
cmake/: CMakeLists.txt  adb.cmake  fastboot.cmake  libandroidfw.cmake  libcrypto_utils.cmake  libincfs.cmake  liblp.cmake  libziparchive.cmake
patches/adb/: adb.cpp.patch
patches/fastboot/: fastboot.cpp.patch
src/adb/: adb.cpp
src/fastboot/: fastboot.cpp
